--- a/login.html
+++ b/login.html
@@ -11,22 +11,18 @@
     <body>
         <header>
         </header>
-        <section class="login-box">
+        <section class="main-container">
             <h1>LOGIN</h1>
             <form action="join.php" method="post">
                 <div class="int-area">
                     <input type="text" placeholder="USER NAME" name="user-id" id="id" autocomplete="off" required>
-                </div>
-                <div class="int-area">
                     <input type="password" placeholder="PASSWORD" name="user-password" id="password" autocomplete="off">
                 </div>
                 <div class="btn-submit">
                     <button type="submit" class="login-btn">LOGIN</button>
-                </div>
-                <div>
-                    <a href="./signup.html" class="join-member">Join to be a member</a>
+                    <a href="./signup.html" class="user-help">Join to be a member</a>
                     <br>
-                    <a class="forgot">Forgot yout password?</a>
+                    <a href="###" class="user-help">Forgot yout password?</a>
                 </div>
             </form>
         </section>
