--- a/login.html
+++ b/login.html
@@ -6,14 +6,21 @@
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/loginstyle.css">
+        <script src="https://kit.fontawesome.com/bf73eb0d33.js" crossorigin="anonymous"></script>
         <title>login</title>
     </head>
     <body>
-        <header>
+        <header class="top-header">
+            <nav class="navbar">
+                <a href="">Home</a> 
+                <a href="">Plan</a>
+                <a href="">Support</a>
+                <a href=""><i class="fa-solid fa-bars"></i></a>
+            </nav>
         </header>
         <section class="main-container">
             <h1>LOGIN</h1>
-            <form action="join.php" method="post">
+            <form action="###" method="post">
                 <div class="int-area">
                     <input type="text" placeholder="USER NAME" name="user-id" id="id" autocomplete="off" required>
                     <input type="password" placeholder="PASSWORD" name="user-password" id="password" autocomplete="off">
