--- a/signup.html
+++ b/signup.html
@@ -24,7 +24,7 @@
             </nav>
         </header>
         <section class="main-container">
-            <h1>SIGN UP NOW</h1>
+            <h1>SIGN UP</h1>
             <form action="###" method="post" class="input-signup-box">
                 <input type="text" class="input-box" placeholder="First name">
                 <input type="text" class="input-box" placeholder="Last name">
